syntax = "proto3";

option csharp_namespace = "Protos";

message GameMessage{
	int32 session_iD = 1;
	string user_name = 2;
	bool do_broadcast = 3;
	oneof Payload{
		SyncMessage game_sync = 4;
		RPC rpc = 5;
	}
};

message SyncMessage{
	int32 player_id = 1;
	int32 prefab_id = 2;
	int32 position_x = 3;
	int32 position_y = 4;
	int32 move_x = 5;
	int32 move_y= 6;
	string current_map = 7;
	string user_name = 8;
	int32 score = 9;
};

message RPC{
	int32 player_id = 1;
	string rpc_name = 2;
	repeated string values = 3;
};